# buoy_detect

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  integration.cpp  main.cpp
catkin_generated/: generate_cached_setup.py  setup_cached.sh
devel/: .catkin  .rosinstall  setup.sh
msg/: center_color.msg
msg_gen/cpp/include/buoy_detect/: center_color.h
msg_gen/lisp/: _package.lisp  _package_center_color.lisp  buoy_detect-msg.asd  center_color.lisp
msgs_stack/kraken_msgs/msg/: scanAction.msg  scanActionFeedback.msg  scanActionGoal.msg  scanActionResult.msg  scanGoal.msg  setYawAction.msg  setYawActionFeedback.msg  setYawActionGoal.msg  setYawActionResult.msg  setYawFeedback.msg  setYawGoal.msg  setYawResult.msg
msgs_stack/kraken_msgs/msg_gen/lisp/: _package.lisp  _package_absoluteRPY.lisp  _package_advancedControllerGoal.lisp  _package_battery.lisp  _package_ipControllererror.lisp  _package_positionData.lisp  _package_powerManagment.lisp  _package_scanGoal.lisp  _package_setYawFeedback.lisp  _package_setYawGoal.lisp  _package_setYawResult.lisp  _package_stateData.lisp  absoluteRPY.lisp  advancedControllerAction.lisp  advancedControllerActionFeedback.lisp  advancedControllerActionGoal.lisp  advancedControllerActionResult.lisp  advancedControllerFeedback.lisp  battery.lisp  (+35 more)
region_growing/: CMakeLists.txt  main.cpp  main_grow
region_growing/src/: grow.cpp  grow.h  grow_BACKUP_7958.cpp  grow_REMOTE_7958.cpp  main.cpp
src/: integration.cpp
src/buoy_detect/msg/: __init__.py  _center_color.py
vw_detect/: vw_detect.h
vw_detect/src/: vw_detect.cpp
(+100 files in other folders)
