cmake_minimum_required(VERSION 2.8)
#project( opencv )
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
rosbuild_init()
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

rosbuild_genmsg()

find_package( Threads )
find_package( OpenCV REQUIRED )
set(CMAKE_BUILD_TYPE Debug)
rosbuild_add_executable( test_main  main.cpp vw_detect/vw_detect.cpp )
rosbuild_add_executable( integrator integration.cpp vw_detect/vw_detect.cpp region_growing/grow.cpp )
rosbuild_target_link_libraries( test_main ${OpenCV_LIBS} )
rosbuild_target_link_libraries( test_main ${CMAKE_THREAD_LIBS_INIT} )
rosbuild_target_link_libraries( integrator ${OpenCV_LIBS} )
rosbuild_target_link_libraries( integrator ${CMAKE_THREAD_LIBS_INIT} )
add_definitions(-std=c++14)
